--- a/index.ipynb
+++ b/index.ipynb
@@ -54,10 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "travel_month = \"January\""
+   ]
   },
   {
    "cell_type": "code",
